@@ -2,6 +2,9 @@
   ChangeLog for the eggleton-tools repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
+   142: AstroFloyd, 23/08/2010
+     - plotmdl: clean up a little
+     
    141: AstroFloyd, 23/08/2010
      - plotmdl: 
        - allow graphs with different x-variables (nx=1 or nx=ny only)
